small changes in nowadays

--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -41,16 +41,16 @@
     </header>
     <main>
         <div class="photo_container">
-            <img src="img/DSC_0546.jpg" class="photo_content">
-            <img src="img/DSC_0558.jpg" class="photo_content">
-            <img src="img/DSC_0563.jpg" class="photo_content">
-            <img src="img/DSC_0572.jpg" class="photo_content">
-            <img src="img/DSC_0583.jpg" class="photo_content">
-            <img src="img/DSC_0628.jpg" class="photo_content">
-            <img src="img/DSC_0631.jpg" class="photo_content">
-            <img src="img/DSC_0646.jpg" class="photo_content">
-            <img src="img/DSC_0658.jpg" class="photo_content">
-            <img src="img/DSC_0736.jpg" class="photo_content">
+            <img src="img/DSC_0546.jpg" class="new_photo">
+            <img src="img/DSC_0558.jpg" class="new_photo">
+            <img src="img/DSC_0563.jpg" class="new_photo">
+            <img src="img/DSC_0572.jpg" class="new_photo">
+            <img src="img/DSC_0583.jpg" class="new_photo">
+            <img src="img/DSC_0628.jpg" class="new_photo">
+            <img src="img/DSC_0631.jpg" class="new_photo">
+            <img src="img/DSC_0646.jpg" class="new_photo">
+            <img src="img/DSC_0658.jpg" class="new_photo">
+            <img src="img/DSC_0736.jpg" class="new_photo">
             <!-- <img src="css/img/img.jpg" alt="img"> -->
         </div>
         <div class="container">
