--- a/info_us/index_info.html
+++ b/info_us/index_info.html
@@ -7,11 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="../css/reset.css">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
-
-
     <link rel="stylesheet" href="css/style.css">
     <title>About Us</title>
 </head>
@@ -53,6 +51,7 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="swiper-body">
+                        <img class="swiper-body__img_artem" src="./css/images/artem.svg" alt="">
                     </div>
                     <div class="swiper-footer">
                         <div class="swiper-info">
@@ -67,7 +66,7 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="swiper-body">
-                        <img src="./css/images/SaSHA.svg" alt="">
+                        <img class="swiper-body__img_sasha" src="./css/images/SaSHA.svg" alt="">
                         <div class="swiper-body-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, adipisci laborum ratione voluptate perspiciatis eaque eos temporibus ex quos nemo, quae id. Eum atque voluptatibus quasi in doloribus sunt totam?
                         </div>
