--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style_new.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/burger.css">
     <link rel="stylesheet" type="text/css" href="css/media.css">
@@ -15,12 +16,10 @@
     <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="container">
     <header>
-
-        <a href="../index.html"><img src="css/img/logo_black.png" alt="" class="logoLink"></a>
-
-        <nav>
+        <a class="logo" href="../index.html"><img src="css/img/logo_black.png" alt="" class="logoLink"></a>
+        <nav class="navigation">
             <ul class="menu">
                 <li class="topik_menu"><a href="../history_Rivne/history.html">Перші згадки про Рівне</a></li>
                 <li class="topik_menu"><a href="../tourist_Rivne/tourist.html">Туристичне Рівне</a></li>
@@ -40,20 +39,21 @@
         </nav>
     </header>
     <main>
-        <div class="photo_container">
-            <img src="img/DSC_0546.jpg" class="new_photo">
-            <img src="img/DSC_0558.jpg" class="new_photo">
-            <img src="img/DSC_0563.jpg" class="new_photo">
-            <img src="img/DSC_0572.jpg" class="new_photo">
-            <img src="img/DSC_0583.jpg" class="new_photo">
-            <img src="img/DSC_0628.jpg" class="new_photo">
-            <img src="img/DSC_0631.jpg" class="new_photo">
-            <img src="img/DSC_0646.jpg" class="new_photo">
-            <img src="img/DSC_0658.jpg" class="new_photo">
-            <img src="img/DSC_0736.jpg" class="new_photo">
-            <!-- <img src="css/img/img.jpg" alt="img"> -->
+        <div class="photos_container">
+            <div class="photos-new">
+                <img src="img/DSC_0546.jpg" class="new_photo">
+                <img src="img/DSC_0558.jpg" class="new_photo">
+                <img src="img/DSC_0563.jpg" class="new_photo">
+                <img src="img/DSC_0572.jpg" class="new_photo">
+                <img src="img/DRAM.jpg" class="new_photo">
+                <img src="img/DSC_0628.jpg" class="new_photo">
+                <img src="img/DSC_0631.jpg" class="new_photo">
+                <img src="img/DSC_0646.jpg" class="new_photo">
+                <img src="img/DSC_0658.jpg" class="new_photo">
+                <img src="img/DSC_0736.jpg" class="new_photo">
+            </div>
         </div>
-        <div class="container">
+        <div class="container-text">
             <div class="text">  
                 <p class = "info">На перший погляд, Рівне — звичайне провінційне місто, яке волею долі стало “столицею” однієї з областей України. На перший погляд, нічим не визначне, але це лише на перший погляд…</p>
 
