add old pictures

--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -46,11 +46,31 @@
                 <img src="img/DSC_0563.jpg" class="new_photo">
                 <img src="img/DSC_0572.jpg" class="new_photo">
                 <img src="img/DRAM.jpg" class="new_photo">
+                <img src="img/краєзн.jpg" class="new_photo">
+                <img src="img/Screenshot 2022-05-23 152754.png" class="new_photo">
                 <img src="img/DSC_0628.jpg" class="new_photo">
                 <img src="img/DSC_0631.jpg" class="new_photo">
                 <img src="img/DSC_0646.jpg" class="new_photo">
                 <img src="img/DSC_0658.jpg" class="new_photo">
                 <img src="img/DSC_0736.jpg" class="new_photo">
+                <img src="img/Screenshot 2022-05-23 153625.png" class="new_photo">
+            </div>
+            <div class="photo-old">
+                <img src="old/lebedinka.jpg" class="old_photo">
+                <img src="old/mist bilya bazara.jpg" class="old_photo">
+                <img src="old/mist pod pivzikom.jpg" class="old_photo">
+                <img src="old/naberezhna.jpg" class="old_photo">
+                <img src="old/old_gidrika.jpg" class="old_photo">
+                <img src="old/kinopalaz.jpg" class = "old_photo">
+                <img src="old/pivzik.jpg" class = "old_photo">
+                <img src="old/Screenshot 2022-05-23 150350.png" class = "old_photo">
+                <img src="old/tam de do mene pruibalas babka.jpg" class = "old_photo">
+                <img src="old/teatr ploshca.jpg" class = "old_photo">
+                <img src="old/teatr.jpg" class = "old_photo">
+                <img src="old/zlata.jpg" class = "old_photo">
+                <img src="old/готель мир.jpg" class = "old_photo">
+                <img src="old/костьол.jpg" class = "old_photo">
+                <img src="old/краєзн.png" class = "old_photo">
             </div>
         </div>
         <div class="container-text">
