--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -74,6 +74,7 @@
                         <div class="swiper-slide"><img src="css/img/WW2-img/3.jpg" alt=""></div>
                         <div class="swiper-slide"><img src="css/img/WW2-img/4.jpg" alt=""></div>
                         <div class="swiper-slide"><img src="css/img/WW2-img/5.jpg" alt=""></div>
+                        <div class="swiper-slide"><img src="css/img/WW2-img/6.jpg" alt=""></div>
                       </div>
                       <div class="swiper-button-next"></div>
                       <div class="swiper-button-prev"></div>
@@ -85,11 +86,11 @@
                <div class="third_period">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide"><img src="css/img/WW2-img/1.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW2-img/2.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW2-img/3.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW2-img/4.jpg" alt=""></div>
-                      <div class="swiper-slide"><img src="css/img/WW2-img/5.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/Sovok-img/1.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/Sovok-img/2.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/Sovok-img/3.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/Sovok-img/4.jpg" alt=""></div>
+                      <div class="swiper-slide"><img src="css/img/Sovok-img/5.jpg" alt=""></div>
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
