--- a/history_Rivne/history.html
+++ b/history_Rivne/history.html
@@ -24,9 +24,9 @@
         </div>
         <nav>
             <ul class="menu">
-                <li class="topik_menu"><a href="../history_Rivne/history.html">Перші згадки про Рівне</a></li>
-                <li class="topik_menu"><a href="../tourist_Rivne/tourist.html">Туристичне Рівне</a></li>
-                <li class="active-page"><a href="../nowadays_Rivne/nowadays.html">Рівне - сьогодні</a></li>
+                <li class="topik_menu"><a href="../history_Rivne/history.html" class="link_nav">Перші згадки про Рівне</a></li>
+                <li class="topik_menu"><a href="../tourist_Rivne/tourist.html" class="link_nav">Туристичне Рівне</a></li>
+                <li class="active-page"><a href="../nowadays_Rivne/nowadays.html" class="link_nav">Рівне - сьогодні</a></li>
             </ul>
 
             <div class="burger-menu">
