--- a/info_us/index_info.html
+++ b/info_us/index_info.html
@@ -44,8 +44,8 @@
                         <div class="swiper-info">
                             <p class="swiper-info__author">Автор: Даниїл Коротков</p>
                             <p class="swiper-info__item">
-                                <img src="./css/images/insta.svg" alt="">
-                                <span>Instagram</span>     
+                                <a href="https://www.instagram.com/_ghosty_code_/"><img src="./css/images/insta.svg" alt=""></a>
+                                <a href="https://www.instagram.com/_ghosty_code_/"><span>Instagram</span></a>
                             </p>
                         </div>
                       </div>
