--- a/info_us/index_info.html
+++ b/info_us/index_info.html
@@ -37,7 +37,7 @@
                       <div class="swiper-body">
                         <img class="swiper-body__img_danil" src="./css/images/Daniel.svg" alt="">
                         <div class="swiper-body-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, adipisci laborum ratione voluptate perspiciatis eaque eos temporibus ex quos nemo, quae id. Eum atque voluptatibus quasi in doloribus sunt totam?
+                            Тут мав би бути опи Даніка, але як ви розумієте з Лорему ми не встигли це зробити =(   .Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, adipisci laborum ratione voluptate perspiciatis eaque eos temporibus ex quos nemo, quae id. Eum atque voluptatibus quasi in doloribus sunt totam?
                         </div>
                       </div>
                       <div class="swiper-footer">
@@ -54,15 +54,15 @@
                     <div class="swiper-body">
                         <img class="swiper-body__img_artem" src="./css/images/artem.svg" alt="">
                         <div class="swiper-body-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, adipisci laborum ratione voluptate perspiciatis eaque eos temporibus ex quos nemo, quae id. Eum atque voluptatibus quasi in doloribus sunt totam?
+                            Тут мав би бути опи Даніка, але як ви розумієте з Лорему ми не встигли це зробити =(   .Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, adipisci laborum ratione voluptate perspiciatis eaque eos temporibus ex quos nemo, quae id. Eum atque voluptatibus quasi in doloribus sunt totam?
                         </div>
                     </div>
                     <div class="swiper-footer">
                         <div class="swiper-info">
                             <p class="swiper-info__author">Автор: Артем Кучерук</p>
                             <p class="swiper-info__item">
-                                <img src="./css/images/insta.svg" alt="">
-                                <span>Instagram</span>
+                                <a href="https://www.instagram.com/tema_kuch/"><img src="./css/images/insta.svg" alt=""></a>
+                                <a href="https://www.instagram.com/tema_kuch/"><span>Instagram</span></a>
                             </p>
                             
                         </div>
@@ -72,7 +72,7 @@
                     <div class="swiper-body">
                         <img class="swiper-body__img_sasha" src="./css/images/SaSHA.svg" alt="">
                         <div class="swiper-body-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, adipisci laborum ratione voluptate perspiciatis eaque eos temporibus ex quos nemo, quae id. Eum atque voluptatibus quasi in doloribus sunt totam?
+                            Тут мав би бути опи Даніка, але як ви розумієте з Лорему ми не встигли це зробити =(   .Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, adipisci laborum ratione voluptate perspiciatis eaque eos temporibus ex quos nemo, quae id. Eum atque voluptatibus quasi in doloribus sunt totam?
                         </div>
                     </div>
                     <div class="swiper-footer">
