--- a/info_us/index_info.html
+++ b/info_us/index_info.html
@@ -44,8 +44,8 @@
                         <div class="swiper-info">
                             <p class="swiper-info__author">Автор: Даниїл Коротков</p>
                             <p class="swiper-info__item">
-                                <a href="https://www.instagram.com/_ghosty_code_/"><img src="./css/images/insta.svg" alt=""></a>
-                                <a href="https://www.instagram.com/_ghosty_code_/"><span>Instagram</span></a>
+                                <a target="_blank" href="https://www.instagram.com/_ghosty_code_/"><img src="./css/images/insta.svg" alt=""></a>
+                                <a target="_blank" href="https://www.instagram.com/_ghosty_code_/"><span>Instagram</span></a>
                             </p>
                         </div>
                       </div>
@@ -61,8 +61,8 @@
                         <div class="swiper-info">
                             <p class="swiper-info__author">Автор: Артем Кучерук</p>
                             <p class="swiper-info__item">
-                                <a href="https://www.instagram.com/tema_kuch/"><img src="./css/images/insta.svg" alt=""></a>
-                                <a href="https://www.instagram.com/tema_kuch/"><span>Instagram</span></a>
+                                <a target="_blank" href="https://www.instagram.com/tema_kuch/"><img src="./css/images/insta.svg" alt=""></a>
+                                <a target="_blank" href="https://www.instagram.com/tema_kuch/"><span>Instagram</span></a>
                             </p>
                             
                         </div>
@@ -79,8 +79,8 @@
                         <div class="swiper-info">
                             <p class="swiper-info__author">Автор: Олександр Чернюк</p>
                             <p class="swiper-info__item">
-                                <a href="https://www.instagram.com/ch_sanya03/"><img src="./css/images/insta.svg" alt=""></a>
-                                <a href="https://www.instagram.com/ch_sanya03/"><span>Instagram</span></a>
+                                <a target="_blank" href="https://www.instagram.com/ch_sanya03/"><img src="./css/images/insta.svg" alt=""></a>
+                                <a target="_blank" href="https://www.instagram.com/ch_sanya03/"><span>Instagram</span></a>
                             </p>
                         </div>
                     </div>
