--- a/info_us/index_info.html
+++ b/info_us/index_info.html
@@ -37,7 +37,7 @@
                       <div class="swiper-body">
                         <img class="swiper-body__img_danil" src="./css/images/Daniel.svg" alt="">
                         <div class="swiper-body-text">
-                            Тут мав би бути опи Даніка, але як ви розумієте з Лорему ми не встигли це зробити =(
+                            Тут мав би бути опис Даніка, але як ви розумієте з Лорему ми не встигли це зробити =(
                         </div>
                       </div>
                       <div class="swiper-footer">
@@ -54,7 +54,7 @@
                     <div class="swiper-body">
                         <img class="swiper-body__img_artem" src="./css/images/artem.svg" alt="">
                         <div class="swiper-body-text">
-                            Тут мав би бути опи Артемки, але як ви розумієте з Лорему ми не встигли це зробити =(
+                            Тут мав би бути опис Артемки, але як ви розумієте з Лорему ми не встигли це зробити =(
                         </div>
                     </div>
                     <div class="swiper-footer">
@@ -72,7 +72,7 @@
                     <div class="swiper-body">
                         <img class="swiper-body__img_sasha" src="./css/images/SaSHA.svg" alt="">
                         <div class="swiper-body-text">
-                            Тут мав би бути опи Сашка, але як ви розумієте з Лорему ми не встигли це зробити =(
+                            Тут мав би бути опис Сашка, але як ви розумієте з Лорему ми не встигли це зробити =(
                         </div>
                     </div>
                     <div class="swiper-footer">
