modify nowadays page

--- a/nowadays_Rivne/nowadays.html
+++ b/nowadays_Rivne/nowadays.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/sashko_new_style.css">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/style_new.css">
+    <!-- <link rel="stylesheet" href="css/style_new.css"> -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/burger.css">
     <link rel="stylesheet" type="text/css" href="css/media.css">
@@ -39,40 +40,7 @@
         </nav>
     </header>
     <main>
-        <div class="photos_container">
-            <div class="photos-new">
-                <img src="img/DSC_0546.jpg" class="new_photo">
-                <img src="img/DSC_0558.jpg" class="new_photo">
-                <img src="img/DSC_0563.jpg" class="new_photo">
-                <img src="img/DSC_0572.jpg" class="new_photo">
-                <img src="img/DRAM.jpg" class="new_photo">
-                <img src="img/краєзн.jpg" class="new_photo">
-                <img src="img/Screenshot 2022-05-23 152754.png" class="new_photo">
-                <img src="img/DSC_0628.jpg" class="new_photo">
-                <img src="img/DSC_0631.jpg" class="new_photo">
-                <img src="img/DSC_0646.jpg" class="new_photo">
-                <img src="img/DSC_0658.jpg" class="new_photo">
-                <img src="img/DSC_0736.jpg" class="new_photo">
-                <img src="img/Screenshot 2022-05-23 153625.png" class="new_photo">
-            </div>
-            <div class="photo-old">
-                <img src="old/lebedinka.jpg" class="old_photo">
-                <img src="old/mist bilya bazara.jpg" class="old_photo">
-                <img src="old/mist pod pivzikom.jpg" class="old_photo">
-                <img src="old/naberezhna.jpg" class="old_photo">
-                <img src="old/old_gidrika.jpg" class="old_photo">
-                <img src="old/kinopalaz.jpg" class = "old_photo">
-                <img src="old/pivzik.jpg" class = "old_photo">
-                <img src="old/Screenshot 2022-05-23 150350.png" class = "old_photo">
-                <img src="old/tam de do mene pruibalas babka.jpg" class = "old_photo">
-                <img src="old/teatr ploshca.jpg" class = "old_photo">
-                <img src="old/teatr.jpg" class = "old_photo">
-                <img src="old/zlata.jpg" class = "old_photo">
-                <img src="old/готель мир.jpg" class = "old_photo">
-                <img src="old/костьол.jpg" class = "old_photo">
-                <img src="old/краєзн.png" class = "old_photo">
-            </div>
-        </div>
+        <!-- <img src="img/ro5B6.jpg" class="krytyak"> -->
         <div class="container-text">
             <div class="text">  
                 <p class = "info">На перший погляд, Рівне — звичайне провінційне місто, яке волею долі стало “столицею” однієї з областей України. На перший погляд, нічим не визначне, але це лише на перший погляд…</p>
@@ -88,7 +56,55 @@
                 <p>Густота населення: 3962 осіб/км² </p>
                 <p>День міста: остання неділя серпня</p>
             </div>
+        </div>
+        
+        </div>
+        <div class="photos_container">
+            <div class="kraizn">
+                <img src="img/краєзн.jpg" class="new_photo">
+                <img src="old/краєзн.png.jpg" class = "old_photo">
             </div>
+            <h1>Краєзнавчий музей</h1>
+            <div class="lebedinka">
+                <img src="img/DSC_0658.jpg" class="new_photo">
+                <img src="old/lebedinka.jpg" class="old_photo">
+            </div>
+            <h1>Лебединка</h1>
+            <div class="gidrik">
+                <img src="img/DSC_0646.jpg" class="new_photo">
+                <img src="old/old_gidrika.jpg" class="old_photo">
+            </div>
+            <h1>Гідропарк</h1>
+            <div class="kinopalaz">
+                <img src="img/Screenshot 2022-05-23 152754.png.jpg" class="new_photo">
+                <img src="old/kinopalaz.jpg" class="old_photo">
+            </div>
+            <h1>Кінопалац "Україна"</h1>
+            <div class="teatr">
+                <img src="img/DSC_0572.jpg" class="new_photo">
+                <img src="old/teatr.jpg" class="old_photo">
+            </div>
+            <h1>Драматичний театр</h1>
+            <div class="most">
+                <img src="img/DSC_0631.jpg" class="new_photo">
+                <img src="old/mist bilya bazara.jpg" class="old_photo">
+            </div>
+            <h1>Панорама з річки Устя</h1>
+            <div class="kostel">
+                <img src="img/kostel.jpg" class="new_photo">
+                <img src="old/костьол.jpg" class="old_photo">
+            </div>
+            <h1>Органний зал</h1>
+        </div>
+        <h2 class="left-topic">Красиві фотографії міста Рівне</h2>
+        <div class="others">
+            
+            <img src="img/DSC_0628.jpg" class="new_photo">
+            <img src="img/DSC_0736.jpg" class="new_photo">
+            <img src="img/DSC_0546.jpg" class="new_photo">
+            <img src="old/готель мир.jpg" class = "old_photo">
+            <img src="old/zlata.jpg" class = "old_photo">
+            <img src="img/DSC_0558.jpg" class="new_photo">
         </div>
     </main>
     <footer>
