--- a/info_us/index_info.html
+++ b/info_us/index_info.html
@@ -37,7 +37,7 @@
                       <div class="swiper-body">
                         <img class="swiper-body__img_danil" src="./css/images/Daniel.svg" alt="">
                         <div class="swiper-body-text">
-                            Тут мав би бути опис Даніка, але як ви розумієте з Лорему ми не встигли це зробити =(
+                            Це Даня - один з кодерів сайту, приймав участь у написанні більшості сторінок. Самостійно написав сторінку про розробників. Допомагав з написанням JavaScript коду. Також допомагав з прийняттям нововведень в проекті. 
                         </div>
                       </div>
                       <div class="swiper-footer">
@@ -46,6 +46,8 @@
                             <p class="swiper-info__item">
                                 <a target="_blank" href="https://www.instagram.com/_ghosty_code_/"><img src="./css/images/insta.svg" alt=""></a>
                                 <a target="_blank" href="https://www.instagram.com/_ghosty_code_/"><span>Instagram</span></a>
+                                <a target="_blank" href="https://github.com/DanilGhosty"><img src="./css/images/1.svg" alt=""></a>
+                                <a target="_blank" href="https://github.com/DanilGhosty"><span>GutHub</span></a>
                             </p>
                         </div>
                       </div>
@@ -54,7 +56,7 @@
                     <div class="swiper-body">
                         <img class="swiper-body__img_artem" src="./css/images/artem.svg" alt="">
                         <div class="swiper-body-text">
-                            Тут мав би бути опис Артемки, але як ви розумієте з Лорему ми не встигли це зробити =(
+                            Це Артем - один з кодерів сайту, приймав участь у написанні більшості сторінок. Самостійно написав сторінку Перші згадки про Рівне. Також писав весь JavaScript код. Приймав активну участь у голосуванні за дизайн сайту.
                         </div>
                     </div>
                     <div class="swiper-footer">
@@ -63,8 +65,9 @@
                             <p class="swiper-info__item">
                                 <a target="_blank" href="https://www.instagram.com/tema_kuch/"><img src="./css/images/insta.svg" alt=""></a>
                                 <a target="_blank" href="https://www.instagram.com/tema_kuch/"><span>Instagram</span></a>
-                            </p>
-                            
+                                <a target="_blank" href="https://github.com/temakuch"><img src="./css/images/1.svg" alt=""></a>
+                                <a target="_blank" href="https://github.com/temakuch"><span>GutHub</span></a>
+                            </p>                           
                         </div>
                     </div>
                   </div>
@@ -72,7 +75,7 @@
                     <div class="swiper-body">
                         <img class="swiper-body__img_sasha" src="./css/images/SaSHA.svg" alt="">
                         <div class="swiper-body-text">
-                            Тут мав би бути опис Сашка, але як ви розумієте з Лорему ми не встигли це зробити =(
+                            Це Сашко - один з кодерів сайту, приймав участь у написанні більшості сторінок. Самостійно написав сторінку Рівне-сьогодні. Автор усіх нових фото на сайті. Натхненник інших кодерів =)
                         </div>
                     </div>
                     <div class="swiper-footer">
@@ -81,6 +84,8 @@
                             <p class="swiper-info__item">
                                 <a target="_blank" href="https://www.instagram.com/ch_sanya03/"><img src="./css/images/insta.svg" alt=""></a>
                                 <a target="_blank" href="https://www.instagram.com/ch_sanya03/"><span>Instagram</span></a>
+                                <a target="_blank" href="https://github.com/chsashko"><img src="./css/images/1.svg" alt=""></a>
+                                <a target="_blank" href="https://github.com/chsashko"><span>GutHub</span></a>
                             </p>
                         </div>
                     </div>
